Added random wall generation to block tower placement