@@ -1,10 +1,8 @@
 package Model.Level;
 
-import Model.Entities.Type;
-
-import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Objects;
 import java.util.concurrent.ThreadLocalRandom;
 
 public class Level {
@@ -21,11 +19,18 @@ public class Level {
     /**This is the exit point for the hooks.*/
     private static int[] myEndPos = new int[2];
     /**This is a thread safe, random.*/
-    private static ThreadLocalRandom myRand = ThreadLocalRandom.current();
+    private static final ThreadLocalRandom RANDOM = ThreadLocalRandom.current();
     /**Noise for terrain generation.*/
-    private static int myNoise = 5;
+    private static final int NOISE = 10;
     /**This is the overall path the hooks will take.*/
-    private static ArrayList<int[]> myCompletePath = new ArrayList<>();
+    private static final ArrayList<int[]> COMPLETE_PATH = new ArrayList<>();
+    /**This is the icon used for paths.*/
+    private static final String PATH_ICON = "P";
+    /**This is the icon used for terrain that can be placed on.*/
+    private static final String SAND_ICON = "-";
+    /**This is terrain that blocks player placement.*/
+    private static final String WALL_ICON = "#";
+
 
 
     /**
@@ -42,12 +47,18 @@ public class Level {
      * This generates a new board to player on.
      */
     public static void generateBoard() {
+
         System.out.println("Generate board");
         chooseMapSize(20);
+
+
+
         createANewRandomPath();
+        placeObstacles();
+
         initialBoard();
         printBoard();
-        printMyCompletePath();
+        //printMyCompletePath();
 
 
 
@@ -62,14 +73,14 @@ public class Level {
                     "than or equal to 10");
         }
 
-        myStartPos[1] = myRand.nextInt(myMapSize);
+        myStartPos[1] = RANDOM.nextInt(myMapSize);
 
         //This makes sure the start is always on the border
         if (myStartPos[1] == 0 || myStartPos[1]
                 == myMapSize - 1 ) {
-            myStartPos[0] = myRand.nextInt(myMapSize);
+            myStartPos[0] = RANDOM.nextInt(myMapSize);
         } else {
-            if(myRand.nextBoolean()) {
+            if(RANDOM.nextBoolean()) {
                 myStartPos[0] = 0;
             } else {
                 myStartPos[0] = myMapSize - 1;
@@ -106,20 +117,20 @@ public class Level {
         * Pivot points are random spots on the map that the
         * path generation algorithm will go to, this adds some controlled randomness
         * to the shape of the path.*/
-        int pivotPoints = myRand.nextInt(myMapSize/2);
+        int pivotPoints = RANDOM.nextInt(NOISE);
 
         //Grabs the entrance of the hooks.
         int[] startPoint = Arrays.copyOf(myStartPos, myStartPos.length);
 
         for (int i = 0; i < pivotPoints; i++) {
 
-            int[] endPoint = {myRand.nextInt(myMapSize),myRand.nextInt(myMapSize)};
+            int[] endPoint = {RANDOM.nextInt(myMapSize), RANDOM.nextInt(myMapSize)};
 
             //Make sure the pivot point isn't already a start point or end point
             while (endPoint[0] == startPoint[0] &&  endPoint[1] == startPoint[1]
                     || endPoint[0] == myEndPos[0] &&  endPoint[1] == myEndPos[1]
                     || myBoard[endPoint[0]][endPoint[1]] != null) {
-                endPoint = new int[]{myRand.nextInt(myMapSize), myRand.nextInt(myMapSize)};
+                endPoint = new int[]{RANDOM.nextInt(myMapSize), RANDOM.nextInt(myMapSize)};
 
             }
             System.out.println("Generating board.");
@@ -133,11 +144,11 @@ public class Level {
 
     /**
      * This is a helper method for generating a path.
+     *
      * @param theStartingPos This is the starting position as [x, y].
-     * @param theEndPos This is the ending position as [x, y ].
-     * @return A truthy value on if the path was able to be generated.
+     * @param theEndPos      This is the ending position as [x, y ].
      */
-    private static boolean generatePath(final int[] theStartingPos, final int[] theEndPos) {
+    private static void generatePath(final int[] theStartingPos, final int[] theEndPos) {
 
         if (theStartingPos.length != 2) {
             throw new RuntimeException("The starting pos must " +
@@ -167,7 +178,7 @@ public class Level {
 
             //Safeguard against infinite loops.
             if (steps > maxSteps) {
-                return false;
+                return;
             }
 
             //increases the steps taken.
@@ -176,27 +187,27 @@ public class Level {
             //This is the typical greedy version of pathfinding.
             if (currentPos[0] < theEndPos[0]
                     && (myBoard[currentPos[0] + 1][currentPos[1]] == null
-                    || myBoard[currentPos[0] + 1][currentPos[1]] == Type.getCORALNAME())) {
+                    || Objects.equals(myBoard[currentPos[0] + 1][currentPos[1]], PATH_ICON))) {
                 currentPos[0]++;
             } else if (currentPos[0] > theEndPos[0]
                     && (myBoard[currentPos[0] - 1][currentPos[1]] == null
-                    || myBoard[currentPos[0] - 1][currentPos[1]] == Type.getCORALNAME())) {
+                    || Objects.equals(myBoard[currentPos[0] - 1][currentPos[1]], PATH_ICON))) {
                 currentPos[0]--;
             } else if (currentPos[1] < theEndPos[1]
                     && (myBoard[currentPos[0]][currentPos[1] + 1] == null
-                    || myBoard[currentPos[0]][currentPos[1] + 1] == Type.getCORALNAME())) {
+                    || Objects.equals(myBoard[currentPos[0]][currentPos[1] + 1], PATH_ICON))) {
                 currentPos[1]++;
             } else if (currentPos[1] > theEndPos[1]
                     && (myBoard[currentPos[0]][currentPos[1] - 1] == null
-                    || myBoard[currentPos[0]][currentPos[1] - 1] == Type.getCORALNAME())) {
+                    || Objects.equals(myBoard[currentPos[0]][currentPos[1] - 1], PATH_ICON))) {
                 currentPos[1]--;
             } else {
 
-                if (!pathTaken.isEmpty()) pathTaken.remove(pathTaken.size() - 1);
+                if (!pathTaken.isEmpty()) pathTaken.removeLast();
 
                 if (!pathTaken.isEmpty()) {
 
-                    int[] lastPos = pathTaken.get(pathTaken.size() - 1);
+                    int[] lastPos = pathTaken.getLast();
                     currentPos = Arrays.copyOf(lastPos, lastPos.length);
 
                 } else {
@@ -210,8 +221,7 @@ public class Level {
 
         }
         applyPath(pathTaken);
-        myCompletePath.addAll(pathTaken);
-        return true;
+        COMPLETE_PATH.addAll(pathTaken);
 
     }
 
@@ -219,7 +229,6 @@ public class Level {
     /**
      * This is a helper method that, applies the path to the board.
      * @param thePath The path taken to the end point.
-
      */
     private static void applyPath(final ArrayList<int[]> thePath) {
 
@@ -230,11 +239,11 @@ public class Level {
 
         for (int[] coord : thePath) {
             if (myBoard[coord[0]][coord[1]] == null) {
-                myBoard[coord[0]][coord[1]] = Type.getCORALNAME();
+                myBoard[coord[0]][coord[1]] = PATH_ICON;
             }
         }
-        myBoard[myStartPos[0]][myStartPos[1]] = Type.getCORALNAME();
-        myBoard[myEndPos[0]][myEndPos[1]] = Type.getCORALNAME();
+        myBoard[myStartPos[0]][myStartPos[1]] = PATH_ICON;
+        myBoard[myEndPos[0]][myEndPos[1]] = PATH_ICON;
     }
 
 
@@ -246,10 +255,86 @@ public class Level {
         for (int i = 0; i < myBoard.length; i++) {
             for (int j = 0; j < myBoard[i].length; j++) {
                 if (myBoard[i][j] == null) {
-                    myBoard[i][j] = Type.getSANDNAME();
+                    myBoard[i][j] = SAND_ICON;
                 }
             }
         }
+    }
+
+    /**
+     * This randomly places obstacles on the map in empty spots.
+     */
+    private static void placeObstacles() {
+        //This picks random spots on the board to place rock clusters
+        int clusterPoints = RANDOM.nextInt(NOISE);
+
+        //This is the max size a cluster can get in any direction
+        int depth = 5;
+
+
+
+
+        for (int i = 0; i < clusterPoints; i++) {
+            //Picks an initial center for the cluster
+            int[] clusterCenter = {RANDOM.nextInt(myMapSize),RANDOM.nextInt(myMapSize)};
+
+            //Make sure the wall isn't blocking a path and that a wall is not on
+            //Another wall.
+            while ((Objects.equals(myBoard[clusterCenter[0]][clusterCenter[1]], PATH_ICON))
+                    || (Objects.equals(myBoard[clusterCenter[0]][clusterCenter[1]], WALL_ICON))) {
+                clusterCenter = new int[]{RANDOM.nextInt(myMapSize), RANDOM.nextInt(myMapSize)};
+            }
+            System.out.println(" This is the depth: "+ depth);
+            generateObstacle(clusterCenter, RANDOM.nextInt(depth) + 1);
+
+        }
+    }
+
+    /**This method recursively generates walls, completely randomly.
+     *
+     * @param theClusterCoords The center of the generation.
+     * @param theDepth This is the distance of generation.
+     */
+    private static void generateObstacle(final int[] theClusterCoords, final  int theDepth) {
+
+        // Breaks the recursion if a path is found.
+        if (myBoard[theClusterCoords[0]][theClusterCoords[1]] != null) return;
+
+        //Create the rock before entering base case.
+        myBoard[theClusterCoords[0]][theClusterCoords[1]] = WALL_ICON;
+
+        //Base case to end recursion, must be at least 2 because a bound of 0 is illegal.
+        if ( theDepth < 2) return;
+
+
+        int depth = theDepth - 1;
+
+        System.out.println(theDepth);
+
+        //Expands out in each direction randomly
+        if (theClusterCoords[0] + 1 < myMapSize
+                && myBoard[theClusterCoords[0] + 1][theClusterCoords[1]] == null) {
+            int[] newClusterCoords = Arrays.copyOf(theClusterCoords, theClusterCoords.length);
+            newClusterCoords[0]++;
+            generateObstacle(newClusterCoords, RANDOM.nextInt(depth));
+        } if (theClusterCoords[1] + 1 < myMapSize
+                && myBoard[theClusterCoords[0]][theClusterCoords[1] + 1] == null) {
+            int[] newClusterCoords = Arrays.copyOf(theClusterCoords, theClusterCoords.length);
+            newClusterCoords[1]++;
+            generateObstacle(newClusterCoords, RANDOM.nextInt(depth));
+        }  if (theClusterCoords[0] - 1 >= 0
+                && myBoard[theClusterCoords[0] - 1][theClusterCoords[1]] == null) {
+            int[] newClusterCoords = Arrays.copyOf(theClusterCoords, theClusterCoords.length);
+            newClusterCoords[0]--;
+            generateObstacle(newClusterCoords, RANDOM.nextInt(depth));
+        } if (theClusterCoords[1] - 1 >= 0
+                && myBoard[theClusterCoords[0]][theClusterCoords[1] - 1] == null) {
+            int[] newClusterCoords = Arrays.copyOf(theClusterCoords, theClusterCoords.length);
+            newClusterCoords[1]--;
+            generateObstacle(newClusterCoords, RANDOM.nextInt(depth));
+        }
+
+
     }
 
     /**
@@ -276,8 +361,8 @@ public class Level {
      * This prints the path the hooks will take.
      */
     public static void printMyCompletePath() {
-        for (int i = 0; i < myCompletePath.size(); i++) {
-            int[] pathSegment = myCompletePath.get(i);
+        for (int i = 0; i < COMPLETE_PATH.size(); i++) {
+            int[] pathSegment = COMPLETE_PATH.get(i);
             System.out.print("Segment " + i + ": ");
             for (int value : pathSegment) {
                 System.out.print(value + " ");
@@ -285,6 +370,8 @@ public class Level {
             System.out.println(); // Move to next line after each segment
         }
     }
+
+
 
 
 
